syntax = "proto3";

option java_package = "ua.nedz.grpc";
option java_outer_classname = "PlanetServiceProto";
option objc_class_prefix = "PSP";

package deathstar;

import "planet.proto";
import "google/protobuf/empty.proto";

service PlanetService {
    rpc GetAllPlanets(google.protobuf.Empty) returns (Planets) {}
    rpc RemovePlanet(RemovePlanetRequest) returns (RemovePlanetResponse) {}
    rpc GenerateNewPlanet(google.protobuf.Empty) returns (Planet) {}
    rpc GetPlanetById(GetPlanetRequest) returns (Planet) {}
}

message RemovePlanetRequest {
    int64 planetId = 1;
}

message RemovePlanetResponse {
    bool result = 1;
}

message GetPlanetRequest {
    int64 planetId = 1;
}